--- a/css/project.css
+++ b/css/project.css
@@ -56,15 +56,24 @@ h1 {
     margin: 0;
 }
 
+p {
+    font-family: aria;
+    text-align: left;
+}
+
 .intro {
     margin: 1rem;
-    width: 95vw;
     background-color: var(--light-blue);
-    padding: 2rem 0 1.5rem 0;
+    padding: 2rem 2rem 1.5rem 2rem;
     border: 1px solid black;
     border-radius: 0.625rem;
     text-align: center;
+    width: 70%;
     
+}
+
+.intro h1 {
+    padding: 1rem;
 }
 
 .button-container {
@@ -103,6 +112,15 @@ h1 {
 .file {
     margin: 1rem;
     max-width: 50rem;
+    width: 70%;
+}
+
+.window { 
+    margin:  1rem auto;
+    max-width: 50rem;
+    border-radius: 0.25rem 0.25rem;
+    width: 70%;
+    /* margin: 0 auto; */
 }
 
 .close {
@@ -129,12 +147,41 @@ h1 {
     }
 }
 
+.window-top {
+    img {
+        /* transform: translate(-0.5px, 7px); */
+        display: block;
+        object-fit: contain;
+        border: 1px solid black;
+        background-color: var(--light-yellow);
+        border-radius: 0.25rem 0.25rem 0px 0px;
+    }
+}
+
 .content{
     padding: 1.2rem;
     /* height: 14rem; */
     border-radius: 0px 0.25rem 0.25rem 0.25rem;
     border: 1px solid #000;
     background-color: #FFD598;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin: 0;
+
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    align-items: center;
+    /* overflow: hidden; */
+}
+
+.window-content{
+    padding: 1.2rem;
+    /* height: 14rem; */
+    border-radius: 0px 0px 0.25rem 0.25rem;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: white;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin: 0;
 
@@ -160,10 +207,17 @@ h1 {
 } */
 
 .pic {
-    aspect-ratio: 1/1;
-    /* width: 179px; */
-    /* border: 1px solid black;
-    border-radius: 0.625rem; */
+    text-align: center;
+
+    img {
+        object-fit: contain;
+        width: 100%;
+        border-radius: 0.625rem;
+        border: 1px solid black;
+    }
+}
+
+.window-pic {
     text-align: center;
 
     img {
@@ -207,58 +261,4 @@ a:hover {
 
 a::after {
     color: black;
-}
-
-
-@media screen and (min-width: 700px) {
-    .container {
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        margin: 0 2rem;
-    }
-
-    .title {
-        font-size: 2rem;
-    }
-
-    .bar {
-        width: 0.625rem;
-        height: 4.5rem;
-    }
-
-    .arrow {
-        display: none;
-    }
-
-    .intro {
-        width: 40%;
-        max-width: 45%;
-    }
-
-    .file {
-        width: 40%;
-    }
-
-    .pic {
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 1100px) {
-    .content {
-        flex-direction: row;
-    }
-}
-
-@media screen and (min-width: 1400px) {
-
-    .container {
-        margin: 0 10rem;
-    }
-
-
-    .close {
-        display: flex;
-    }
 }
