Update style sheet

--- a/css/project.css
+++ b/css/project.css
@@ -234,7 +234,7 @@ p {
     h3 {
         font-family: 'gomepixel-rounded';
         font-size: 1.75rem;
-        margin-top: 0;
+        margin: 0;
     }
 }
 
