--- a/css/project.css
+++ b/css/project.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face {
     font-family: 'gomepixel-regular';
     src:url('../fonts/gomepixel-regular-webfont.woff') format('woff'),
@@ -57,7 +59,7 @@ h1 {
 }
 
 p {
-    font-family: aria;
+    font-family: "Montserrat", serif;
     text-align: left;
 }
 
