--- a/css/record.css
+++ b/css/record.css
@@ -60,6 +60,7 @@ body {
 h1,h2 {
     margin: 0;
     font-family: var(--header-font);
+    text-transform: uppercase;
 }
 
 .container {
@@ -106,12 +107,13 @@ h1,h2 {
 }
 
 .content {
-    padding: 2rem;
+    padding: 3rem;
 
 }
 
 table {
-    width: 40vw;
+min-width: 40vw;
+
 }
 
 table, th, td {
@@ -123,5 +125,13 @@ table, th, td {
 
 th, td {
     padding: 0.5rem 1rem;
+}
+
+th {
+    background-color: var(--light-yellow);
+}
+
+tr:hover {
+    background-color: var(--light-yellow);
 }
 
