--- a/css/project.css
+++ b/css/project.css
@@ -255,8 +255,8 @@ p {
 }
 
 a {
-    color: black;
-    text-decoration: none;
+    color: var(--red);
+    /* text-decoration: none; */
 }
 
 a:hover {
