--- a/css/record.css
+++ b/css/record.css
@@ -77,7 +77,7 @@ h1,h2 {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin: 1rem;
     width: 90%;
-    max-width: 50rem;
+    max-width: 70rem;
 
     /* overflow: scroll; */
 
@@ -111,12 +111,13 @@ h1,h2 {
 }
 
 .content {
-    padding: 3rem;
+    padding: 2rem;
     overflow:hidden;
     overflow-x: scroll;
+    width: 100%;
 
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
 
 }
 
@@ -124,6 +125,11 @@ h1,h2 {
 table, th, td {
     border:1px solid black;
     border-collapse: collapse;
+
+}
+
+table {
+    width: 100%;
 
 }
 
