--- a/alpha/css/menu-item.css
+++ b/alpha/css/menu-item.css
@@ -53,7 +53,6 @@ body {
     width: 27.5rem;
     background-color: white;
     font-family: var(--menu-font);
-    color: var(--grey);
     margin-top: 2rem;
 
     transform: translateY(8rem);
@@ -87,6 +86,9 @@ body {
 
 .item {
     grid-column: span 2;
+    color: black;
+    text-decoration: none;
+
 
     img {
         width: 100%;
@@ -94,9 +96,16 @@ body {
     }
 }
 
+.item:visited {
+    color: black;
+}
+
 .description {
     display: flex;
     justify-content: space-between;
+
+
+    
 }
 
 .title {
