🐛 change height of the screen

--- a/alpha/css/general.css
+++ b/alpha/css/general.css
@@ -40,7 +40,7 @@ body {
 
 .screen-container {
     width: 27.5rem;
-    /* height: 59.75rem; */
+    height: 59.75rem;
     margin: auto;
     /* border-radius: 1.5rem; */
 
