--- a/alpha/css/menu-item.css
+++ b/alpha/css/menu-item.css
@@ -79,7 +79,8 @@ body {
 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
     padding: 0 2rem;
     /* margin: 0 2rem; */
 }
