--- a/alpha/css/menu.css
+++ b/alpha/css/menu.css
@@ -22,6 +22,10 @@ h1 {
     z-index: 90;
 }
 
+#drinks{
+    scroll-behavior: smooth;
+}
+
 .heading-4{
     color: white;
     text-decoration: none;
