--- a/alpha/css/button.css
+++ b/alpha/css/button.css
@@ -37,7 +37,7 @@ button + button {
 .nofill-button {
     width: 23.5rem;
     height: 3.5rem;
-    background-color: transparent; 
+    background-color: white; 
     color: var(--brown); 
     border: 3px solid var(--brown);
     border-radius: 0.5rem; 
