--- a/alpha/css/payment-1.css
+++ b/alpha/css/payment-1.css
@@ -63,7 +63,7 @@ h4 {
 
 .point {
     width: 12.5rem;
-    height: 4.875rem;
+    min-height: 4.875rem;
 
     margin: 0 auto;
     border: 3px solid black;
@@ -115,7 +115,12 @@ h4 {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin-top: 1rem;
     margin-bottom: 2rem;
+
+    background-color: white;
+
+    z-index: 100;
 
 }
 
