🚧 Change scroll-behavior

--- a/alpha/css/menu-item.css
+++ b/alpha/css/menu-item.css
@@ -18,6 +18,8 @@
     height: calc(100vh-14rem);
     overflow-y: auto;
 
+    scroll-behavior: smooth;
+
     h2 {
         text-align: center;
     }
