--- a/components/heart-button.html
+++ b/components/heart-button.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
-    <div class='large-font text-center top-20'>
-        <ion-icon name="heart">
-        <div class='red-bg'></div>
-        </ion-icon>
+    <div class="heart">
+        <div class='large-font text-center top-20'>
+            <ion-icon name="heart">
+            <div class='red-bg'></div>
+            </ion-icon>
+        </div>
     </div>
     
     <script src="/js/script.js"></script>
