--- a/css/heart-button.css
+++ b/css/heart-button.css
@@ -1,3 +1,11 @@
+.heart {
+    text-align: center;
+}
+
+.heart:hover ion-icon {
+    cursor: pointer;
+}
+
 .large-font{
     font-size:xxx-large;
 }
