--- a/alpha/css/general.css
+++ b/alpha/css/general.css
@@ -47,7 +47,7 @@ body {
     width: 27.5rem;
     height: 100vh;
 
-    min-height: 59.75rem;
+    /* min-height: 59.75rem; */
     margin: auto;
     /* border-radius: 1.5rem; */
 
