--- a/alpha/css/menu.css
+++ b/alpha/css/menu.css
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.filter-bar::-webkit-scrollbar {
+    display: none;
+  }
+
 .filter-bar {
     width: 27.5rem;
     height: 3.5rem;
