--- a/alpha/css/bag.css
+++ b/alpha/css/bag.css
@@ -78,6 +78,7 @@ nav {
 .nav-background {
     position: absolute;
     top: 0;
+    transform: translateY(-1rem);
 }
 
 
@@ -114,7 +115,8 @@ nav {
     background-color: #FFEEDC;
     border-radius: 0.75rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-    width: 25rem;
+    max-width: 23.5rem;
+    width: 100%;
     padding: 1rem;
     display: flex;
     grid-template-columns: 6.25rem 1fr;
