--- a/alpha/css/button.css
+++ b/alpha/css/button.css
@@ -10,7 +10,8 @@ button + button {
 
 /* filled button style */
 .filled-button {
-    width: 23.5rem;
+    width: 100%;
+    max-width: 23.5rem;
     height: 3.5rem;
     background-color: var(--brown);
     color: white;
