--- a/alpha/css/confirm.css
+++ b/alpha/css/confirm.css
@@ -7,9 +7,18 @@ nav {
 }
 
 .nav-background {
+    width: 100%;
+    max-width: 27.5rem;
     position: absolute;
-    z-index: 1;
     top: 0;
+
+    z-index: 1;
+    transform: translateY(-1rem);
+
+    svg {
+        width: 100%;
+        
+    }
 }
 
 
@@ -18,10 +27,10 @@ nav {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    height: calc(59.75rem - 12rem);
+    /* height: calc(59.75rem - 20rem); */
     justify-content: space-between;
     
-    margin-top: 6rem;
+    margin-top: 8rem;
     /* transform: translateY(5rem); */
     position: relative;
     z-index: 100;
