--- a/alpha/css/detail.css
+++ b/alpha/css/detail.css
@@ -7,7 +7,8 @@
 }
 
 .content {
-    width: 27.5rem;
+    width: 100%;
+    max-width: 27.5rem;
     background-color: white;
     padding: 2.5rem 2rem;
 
