--- a/alpha/css/log-in.css
+++ b/alpha/css/log-in.css
@@ -31,7 +31,8 @@ nav {
 }
 
 .logo-container {
-    width: 27.5rem;
+    width: 100%;
+    max-width: 27.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +43,8 @@ nav {
 }
 
 .logo-text {
-    width: 27rem;
+    width: 100%;
+    max-width: 27rem;
     height: 6rem;
     overflow: hidden;
     margin: 0 auto;
@@ -66,6 +68,8 @@ nav {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    width: 100%;
+    max-width: 20.5rem;
 
 }
 
