--- a/alpha/css/menu-item.css
+++ b/alpha/css/menu-item.css
@@ -1,7 +1,8 @@
 
 
 .menu-container {
-    width: 27.5rem;
+    width: 100%;
+    max-width: 27.5rem;
     background-color: white;
     font-family: var(--menu-font);
     margin-top: 2rem;
@@ -28,7 +29,8 @@
 }
 
 .category {
-    width: 27.5rem;
+    width: 100%;
+    max-width: 27.5rem;
 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
