--- a/alpha/css/payment-1.css
+++ b/alpha/css/payment-1.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: hidden;
+}
+
 nav {
     position: relative;
     background-color: transparent;
@@ -7,17 +11,27 @@ nav {
 }
 
 .nav-background {
+    width: 100%;
+    max-width: 27.5rem;
     position: absolute;
     top: 0;
+
+    z-index: 1;
+    transform: translateY(-1rem);
+
+    svg {
+        width: 100%;
+        
+    }
 }
 
-.content-container {
+/* .content-container {
     transform: translateY(5rem);
     z-index: 40;
 
-    overflow-y: auto;
+
+    overflow-y: visible;
     overflow-x: hidden;
-    /* padding-top: 7rem; */
 
     display: flex;
     flex-direction: column;
@@ -25,13 +39,19 @@ nav {
     height: calc(100% - 8.5rem);
 
 
-    /* flex: 1; */
-}
+
+} */
 
 .content {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    z-index: 40;
+    position: relative;
+    margin-top: 3.5rem;
+
+
 }
 
 h1 {
@@ -58,6 +78,7 @@ h4 {
     width: 23.5rem;
     height: 5.875rem;
     padding: 1.5rem;
+    background-color: white;
 
     display: flex;
     justify-content: flex-start;
