--- a/alpha/css/bag.css
+++ b/alpha/css/bag.css
@@ -304,3 +304,13 @@ nav {
     display: flex;
     justify-content: space-between;
 }
+
+.empty-bag {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    text-align: center; 
+    width: 100%;
+    margin-top: 5.87rem;
+}
