--- a/alpha/css/bag.css
+++ b/alpha/css/bag.css
@@ -76,9 +76,18 @@ nav {
 }
 
 .nav-background {
+    width: 100%;
+    max-width: 27.5rem;
     position: absolute;
     top: 0;
+
+    z-index: 1;
     transform: translateY(-1rem);
+
+    svg {
+        width: 100%;
+        
+    }
 }
 
 
@@ -93,7 +102,7 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: calc(100% - 26.9rem);
+    height: calc(100% - 29.9rem);
 
 }
 
@@ -115,8 +124,7 @@ nav {
     background-color: #FFEEDC;
     border-radius: 0.75rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-    max-width: 23.5rem;
-    width: 100%;
+    width: 23.5rem;
     padding: 1rem;
     display: flex;
     grid-template-columns: 6.25rem 1fr;
