--- a/alpha/css/detail.css
+++ b/alpha/css/detail.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 6rem;
+    margin-top: 4.5rem;
     gap: 2rem;
 
     /* transform: translateY(5rem); */
@@ -43,6 +43,10 @@ h2,p {
 .description, .subtotal {
     display: flex;
     justify-content: space-between;
+}
+
+.subtotal {
+    margin: 1rem 0;
 }
 
 .option {
@@ -92,8 +96,29 @@ br {
 }
 
 .fav-container {
-    height: 2.5rem;
+    /* height: 2.5rem; */
     padding: 0.5rem;
+
+    display: flex;
+    justify-content: space-between;
+
+    object-fit: contain;
+
+    .counter {
+        display: flex;
+        gap: 2rem;
+        padding:0 1rem;
+        border-radius: 2.5rem;
+        border: 3px solid var(--red);
+        overflow: visible;
+        align-items: center;
+
+        p {
+            font-size: 1.25rem;
+            color: var(--red);
+            font-weight: 400;
+        }
+    }
 }
 
 button {
@@ -113,4 +138,6 @@ button {
     cursor: pointer;
 
 }
+
+
 
