--- a/alpha/css/menu-item.css
+++ b/alpha/css/menu-item.css
@@ -38,6 +38,7 @@
     grid-row-gap: 2rem;
     padding: 0 2rem;
     /* margin: 0 2rem; */
+
 }
 
 .item {
@@ -81,4 +82,6 @@
     font-weight: 700;
     font-family: var(--main-font);
     margin: 0;
+
+    scroll-margin-top: 6rem;
 }
