--- a/alpha/css/foodcard.css
+++ b/alpha/css/foodcard.css
@@ -4,67 +4,63 @@
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 
     width: 100%;
-    width: 23.5rem;
+    max-width: 23.5rem;
+    height: 100%;
 
     padding: 1rem;
     display: flex;
-    grid-template-columns: 6.25rem 1fr;
+    /* grid-template-columns: 6.25rem 1fr; */
     gap: 1rem;
     align-items: center;
     margin: 0 auto;
+    flex-wrap: nowrap;
+
+    font-family: var(--menu-font);
 
     p {
         text-align: left;
+        font-weight: 400;
     }
 }
 
-/* .food-image img {
-    width: 5rem; 
-    height: 5rem; 
-    border-radius: 0.5rem;
-    object-fit: cover;
-} */
-
 .food-pic {
-    height: 6rem;
+    height: 100%;
+    max-height: 6rem;
     border-radius: 0.5rem ;
 }
 
 .food-details {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 0.5rem;
     width: 100%;
 }
 
 .food-details-title { 
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    h3 {
+        font-weight: 700;
+        font-size: 1rem;
+    }
+
 }
 
-.food-details h3 {
-    font-size: 1.2rem;
-    margin: 0 0 0.25rem;
-}
-
-.food-details p {
-    color: #555;
-    font-size: 0.9rem;
-}
 
 .actions {
     display: flex;
     justify-content: space-between; 
     align-items: center;
-    margin-top: 0.5rem;
 }
 
 .actions img {
-    width: 1.5625rem;
+    width: 1.5rem;
     cursor: pointer;
 }
 
-.edit-delete-button {
+.button-container{
     display: flex;
     gap: 0.5rem; 
     align-items: center;
@@ -73,22 +69,37 @@
 .product-count {
     display: flex;
     align-items: center;
-    gap: 0.375rem;
+    gap: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    border-radius: 1rem;
+    background-color: white;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15);
+
 }
 
 .button-count {
     background: none;
-    border: 1px solid #ccc;
-    padding: 0.25rem 0.5rem;
-    border-radius: 0.25rem;
+    border: none;
     cursor: pointer;
-    font-size: 1rem;
+    object-fit: contain;
+    padding: 0;
+
+    svg {
+        color: black;
+    }
+    img {
+        color: black;
+        width: 1.25rem;
+    }
+
 }
 
 .number-product {
-    width: 1.75rem;
+    width: 1.25rem;
+    height: 1.25rem;
     text-align: center;
+    font-size: 1.25rem;
     border: none;
     background: none;
-    font-size: 1rem;
+
 }
