🚧 Add add to bag function

--- a/ca/css/item-counter.css
+++ b/ca/css/item-counter.css
@@ -6,7 +6,7 @@
     height: 1.75rem;
     width: 9rem;
     border: 3px solid #C73715;
-    border-radius: 46px;
+    border-radius: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
