--- a/beta/css/log-in.css
+++ b/beta/css/log-in.css
@@ -67,7 +67,6 @@ nav {
 .login-container {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
     width: 100%;
     max-width: 20.5rem;
 
@@ -82,6 +81,7 @@ nav {
         border-radius: 0.5rem;
         color: black;
         font-size: 1rem;
+        margin-bottom: .5rem;
 
     }
 
@@ -95,9 +95,13 @@ input {
     accent-color: var(--red);
 }
 
+.remember-me {
+    margin: 0rem 0rem .5rem 0rem;
+}
 a {
     color: black;
     text-align: center;
+    margin-top: .5rem;
 }
 
 a:visited {
