--- a/beta/css/payment-1.css
+++ b/beta/css/payment-1.css
@@ -1,5 +1,6 @@
 html {
     overflow-y: hidden;
+    font-family: var(--main-font);
 }
 
 nav {
@@ -95,8 +96,9 @@ h4 {
     min-height: 4.875rem;
 
     margin: 0 auto;
-    border: 3px solid black;
-    background-color: white;
+    /* border: 3px solid black; */
+    color: white;
+    background-color: var(--brown);
     border-radius: 1rem;
 
     display: flex;
@@ -138,7 +140,7 @@ h4 {
     }
 }
 
-.total-container {
+/* .total-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -159,8 +161,9 @@ h4 {
     div {
         display: flex;
         justify-content: space-between;
+        width: 100%;
     }
-}
+} */
 
 button {
     width: 23.5rem;
@@ -181,4 +184,31 @@ button {
     opacity: 0.5;
     pointer-events: none;
     cursor:no-drop;
+}
+
+.two-columns {
+    display: flex;
+    justify-content: space-between; 
+    width: 100%; 
+    /* margin: 7.37rem 2rem .5rem 2rem; */
+}
+
+.column {
+    width: 50%;
+    margin-top: 5rem;
+    margin-bottom: .5rem;
+}
+
+.left-column {
+    text-align: left; 
+    margin-left: 2rem;
+}
+
+.right-column {
+    text-align: right; 
+    margin-right: 2rem;
+}
+
+.two-columns h4 {
+    margin-bottom: 0rem;
 }
