--- a/beta/css/status.css
+++ b/beta/css/status.css
@@ -43,27 +43,26 @@ h1, p {
 
 h2, h4 {
     text-align: center;
-
     color: black;
 }
 
 .estimated-time {
     margin-bottom: 2rem;
 }
+
 .progress-bar {
     display: flex;
     gap: 0.5rem;
     justify-content: center;
 
-    div {
+
+    .step {
         width: 6rem;
         height: 0.5rem;
-        background-color: var(--brown);
+        background-color: var(--red);
     }
 
-    div:last-child {
-        background-color: var(--light-yellow);
-    }
+    
 }
 
 .status {
@@ -71,38 +70,61 @@ h2, h4 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 100px; 
-}
+    gap: 1rem;
 
 
-.status div {
-    width: 50px; /* Adjust as needed */
-    height: 10px; /* Ensure visibility */
-    background-color: lightgray; /* Just for visibility, remove if not needed */
-}
-
-
-.total-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    margin-top: 3rem;
-
-    background-color: white;
-
-    z-index: 100;
-
-
-
-}
-
-.total {
-    width: 11.5rem;
-
-    div {
-        display: flex;
-        justify-content: space-between;
+    img {
+        height: 100%;
     }
+}
+
+.status:last-child {
+    opacity: 0.4;
+
+    .step {
+        background-color: var(--light-yellow);
+    }
+}
+
+/* 
+.status div {
+    width: 50px;
+
+} */
+
+
+
+.column {
+    width: 50%;
+    margin-bottom: .5rem;
+}
+
+.left-column {
+    h2,h4, p {
+
+        text-align: left;
+    }
+    margin-left: 2rem;
+
+    
+}
+
+.right-column {
+    h2,h4, p {
+
+        text-align: right;
+    }
+    margin-right: 2rem;
+}
+
+.two-columns h4 {
+    margin-bottom: 0rem;
+}
+
+.two-columns {
+    display: flex;
+    justify-content: space-between; 
+    width: 100%; 
+    margin-top: 8rem;
+    /* margin: 7.37rem 2rem .5rem 2rem; */
 }
