--- a/beta/css/payment-1.css
+++ b/beta/css/payment-1.css
@@ -116,6 +116,31 @@ h4 {
 
 }
 
+.point2 {
+    width: 12.5rem;
+    min-height: 4.875rem;
+
+    margin: 0 auto;
+    /* border: 3px solid black; */
+    color: white;
+    background-color: var(--brown);
+    border-radius: 1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    p {
+        font-weight: 700;
+    }
+
+    p:nth-child(1){
+        font-size: 0.75rem;
+    }
+
+}
+
 .pickup-time, .add-tips {
     padding: 0 2rem;
     h4 {
