--- a/beta/css/confirm.css
+++ b/beta/css/confirm.css
@@ -22,27 +22,14 @@ nav {
     }
 }
 
-
 .content-container {
-    /* flex: 1; */
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-
-    height: calc(59.75rem - 12rem);
-
-    justify-content: space-between;
-    
+    justify-content: flex-start; /* Align items to the top */
+    height: calc(59.75rem - 12rem); /* Keep the height the same */
     margin-top: 8rem;
-    /* transform: translateY(5rem); */
-    position: relative;
-    z-index: 100;
-    margin-bottom: 2rem;
-    
     overflow-y: auto;
     overflow-x: hidden;
-    
-    
 }
 
 h1, p {
@@ -84,7 +71,13 @@ h1, p {
     font-weight: 500;
 }
 
-/* .btn-container {
-    margin-bottom: 2rem;
-} */
 
+.stars-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stars {
+    /* Add any additional styles for the image */
+}
