--- a/css/step1.css
+++ b/css/step1.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
 }
+
 .category {
     width: 20rem;
 }
@@ -12,4 +13,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.title {
+    h2 {
+        text-align: center;
+    }
 }
