--- a/beta/css/general.css
+++ b/beta/css/general.css
@@ -19,7 +19,7 @@ html {
     --light-yellow: #FFEEDC;
     --bg-yellow: #FFD598;
 
-    --background-color: #A63B33;
+    --background-color: darkgrey;
 
     --main-font: 'Montserrat', sans-serif;
     --menu-font: 'Inter', sans-serif;
@@ -90,7 +90,7 @@ nav {
         cursor: pointer;
         background: none;
         border: none;
-        
+
         margin: 0;
     }
 
