--- a/final/css/bag.css
+++ b/final/css/bag.css
@@ -1,63 +1,15 @@
 /*bag.css*/
-/* 1. Use a more-intuitive box-sizing model */
 *, *::before, *::after {
     box-sizing: border-box;
 }
 
-/* 2. Remove default margin */
-* {
-    margin: 0;
+nav {
+    position: fixed;
+    top: 0;
+
+    background-color: transparent;
 }
 
-/* body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f9f9f9;
-} */
-
-/* 3. Improve media defaults */
-img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-}
-
-/* 4. Inherit fonts for form controls */
-input, button, textarea, select {
-    font: inherit;
-}
-
-/* 5. Avoid text overflows */
-p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-}
-
-/* 6. Improve line wrapping */
-p {
-    text-wrap: pretty;
-}
-h1, h2, h3, h4, h5, h6 {
-    text-wrap: balance;
-}
-
-/* 7. Create a root stacking context */
-#root, #__next {
-    isolation: isolate;
-}
-
-/* h1 {
-    text-align: center;
-    margin-bottom: 2rem !important;
-}
-
-h4 {
-    margin: 0.5rem 2rem !important;
-} */
 
 h1 {
     text-align: center;
@@ -67,13 +19,13 @@ h4 {
     color: black;
 }
 
-nav {
+/* nav {
     position: relative;
     background-color: transparent;
     overflow: visible;
 
     z-index: 50;
-}
+} */
 
 .nav-background {
     width: 100%;
@@ -92,8 +44,10 @@ nav {
 
 
 .content-container {
-    transform: translateY(5rem);
-    z-index: 40;
+    /* transform: translateY(5rem); */
+    padding-top: 8.5rem;
+    position: relative;
+    z-index: 900;
 
     overflow-y: auto;
     overflow-x: hidden;
@@ -101,32 +55,81 @@ nav {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: calc(100% - 29.9rem);
+    height: 100vh;
+    /* height: calc(100vh - 29.9rem); */
 
 }
 
 .total-container {
     /* background-color: pink; */
+    background-color: white;
+    width: 100%;
+    max-width: 27.5rem;
+    
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+
+    position: fixed;
+    bottom: 0;
+    z-index: 1000;
 }
 
 .content {
+    margin-top: 2rem;
+    margin-bottom: 10rem;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+    
+
+  
+}
+
+/* item in bag */
+.item-card {
+    width: 100%;
+    max-width: 23.5rem;
+    background-color: var(--light-yellow);
+}
+
+/* Subtotal Section */
+.subtotal {
+    display: flex;
+    justify-content: space-between;
+}
+
+.empty-bag {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    text-align: center; 
+    width: 100%;
+    
+    height: 18rem;
+}
+
+.fav-section {
+    
+    /* background-color: pink; */
+
+    padding: 1rem 2rem;
 }
 
 
-/* Popular Items Section */
+
+/* fav items section */
 .popular-items {
     display: flex;
     gap: 1rem;
     overflow-x: auto; 
     padding-bottom: 1rem; 
+
+    margin-top: 0.5rem;
 }
 
 
@@ -152,6 +155,7 @@ nav {
     aspect-ratio: 1/1;
     object-fit: contain;
     border-radius: 0.5rem;
+    width: 100%;
 }
 
 .description {
@@ -177,84 +181,5 @@ nav {
     height: 1.35rem;
 }
 
-.add-button:hover {
-    background-color:var(--red); 
-    color: #fff; 
-    border-radius: 50%;
-    transform: scale(1.1); 
-    cursor: pointer;
-}
-
-/* 
 
 
-
-.add-button {
-    position: absolute;
-    bottom: 0.5rem;
-    right: 0.5rem;
-    background-color: #FFEEDC; 
-    border: 1px solid black; 
-    border-radius: 50%; 
-    width: 1.3125rem; 
-    height: 1.3125rem; 
-    font-size: 0.9rem; 
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0.1875rem 0.3125rem rgba(0, 0, 0, 0.15); 
-    transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-.add-button:hover {
-    background-color: #FF7F50; 
-    color: #fff; 
-    transform: scale(1.1); 
-} */
-
-
-
-/* Proceed Button */
-/* .proceed-button {
-    position: fixed;
-    bottom: 3rem;
-    width: 23.5rem;
-    height: 3.5rem;
-    margin: 0.5rem 2rem 2rem 2rem;
-    background-color: #470D01;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 0.5rem;
-    font-size: 1rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-    outline: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.1s ease, box-shadow 0.2s ease; 
-} */
-
-/* .proceed-button:active {
-    transform: scale(0.95); 
-    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2); 
-} */
-
-/* Subtotal Section */
-.subtotal {
-    display: flex;
-    justify-content: space-between;
-}
-
-.empty-bag {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    text-align: center; 
-    width: 100%;
-    margin-top: 5.87rem;
-}
