--- a/final/css/foodcard.css
+++ b/final/css/foodcard.css
@@ -5,7 +5,7 @@
 
     width: 100%;
     max-width: 23.5rem;
-    height: 100%;
+    height: auto;
 
     padding: 1rem;
     display: flex;
@@ -25,7 +25,7 @@
 
 .food-pic {
     height: 100%;
-    max-height: 6rem;
+    max-height: 6.5rem;
     border-radius: 0.5rem ;
 }
 
@@ -34,6 +34,7 @@
     flex-direction: column;
     gap: 0.5rem;
     width: 100%;
+    
 }
 
 .food-details-title { 
@@ -47,6 +48,28 @@
         font-size: 1rem;
     }
 
+}
+
+.customization {
+    /* border: 1px solid black; */
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 14rem;
+    display: block;
+}
+
+.note {
+    text-wrap: wrap;
+}
+
+.clear-bag {
+    color: black;
+    text-align: center;
+}
+
+.clear-bag:visited {
+    color: black;
 }
 
 
@@ -65,6 +88,12 @@
     display: flex;
     gap: 0.5rem; 
     align-items: center;
+}
+
+.delete-button {
+    background: none;
+    border: none;
+    padding: 0;
 }
 
 .product-count {
