--- a/final/css/menu-item.css
+++ b/final/css/menu-item.css
@@ -84,7 +84,8 @@ h4 {
     justify-content: space-between;
     align-items: center;
 
-    width: 27.5rem;
+    width: 100%;
+    max-width: 27.5rem;
     margin-bottom: 2rem;
     
     .line {
