--- a/final/css/quantity.css
+++ b/final/css/quantity.css
@@ -1,19 +1,21 @@
 .quantity {
     width: 1.25rem;
     height: 1.25rem;
-    flex-shrink: 0;
     position: absolute;
     background-color: red;
     padding: 0.5rem;
     top: 1rem;
     right: 1.25rem;
     border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
     p {
-        position: absolute;
-        font-size: 0.75rem;
+        
+        font-size: 0.8rem;
         font-family: var(--main-font);
-        transform: translateY(-0.35rem);
     
     }
 }
