🐛 Fix change quantity function

--- a/final/css/detail.css
+++ b/final/css/detail.css
@@ -161,3 +161,12 @@ br {
     }
 }
 
+.cancel-update {
+    color: var(--brown);
+    text-align: center;
+}
+
+.cancel-button:visited {
+    color: var(--brown);
+}
+
