--- a/final/css/button.css
+++ b/final/css/button.css
@@ -33,6 +33,36 @@ button + button {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+/* no fill button style */
+.nofill-button {
+    /* margin-top: 5rem; */
+    width: 100%;
+    max-width: 23.5rem;
+    height: 3.5rem;
+    background-color: white; 
+    color: var(--brown); 
+    border: 3px solid var(--brown);
+    border-radius: 0.5rem; 
+    font-size: 1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.1s ease, background-color 0.2s ease, color 0.2s ease; /* Smooth interaction effect */
+
+    h4 {
+        color: var(--brown);
+    }
+}
+
+.nofill-button:active {
+    transform: scale(0.95);
+
+}
+
 .signup-button {
     width: 100%;
     max-width: 23.5rem;
@@ -59,27 +89,3 @@ button + button {
 }
 
 
-/* no fill button style */
-.nofill-button {
-    margin-top: 5rem;
-    width: 23.5rem;
-    height: 3.5rem;
-    background-color: white; 
-    color: var(--brown); 
-    border: 3px solid var(--brown);
-    border-radius: 0.5rem; 
-    font-size: 1rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-    outline: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.1s ease, background-color 0.2s ease, color 0.2s ease; /* Smooth interaction effect */
-}
-
-.nofill-button:active {
-    transform: scale(0.95);
-
-}
