--- a/final/css/bag.css
+++ b/final/css/bag.css
@@ -148,6 +148,19 @@ h4 {
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15);
     border-radius: 1rem;
     padding: 0.5rem;
+
+    a {
+        text-decoration: none;
+        color: black;
+
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    a:visited{
+        color: black;
+    }
 }
 
 .pop-items-container img {
